--- a/formula/uiconfig/ui/functionpage.ui
+++ b/formula/uiconfig/ui/functionpage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="for">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkTreeStore" id="liststore1">
@@ -12,20 +12,20 @@
   </object>
   <object class="GtkBox" id="FunctionPage">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
-    <property name="border_width">6</property>
+    <property name="border-width">6</property>
     <property name="orientation">vertical</property>
     <property name="spacing">6</property>
     <child>
       <object class="GtkLabel" id="label_search">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="halign">start</property>
         <property name="label" translatable="yes" context="functionpage|label_search">_Search</property>
-        <property name="use_underline">True</property>
-        <property name="mnemonic_widget">search</property>
+        <property name="use-underline">True</property>
+        <property name="mnemonic-widget">search</property>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -36,9 +36,9 @@
     <child>
       <object class="GtkEntry" id="search">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
+        <property name="can-focus">True</property>
         <property name="hexpand">True</property>
-        <property name="activates_default">True</property>
+        <property name="activates-default">True</property>
         <property name="truncate-multiline">True</property>
         <child internal-child="accessible">
           <object class="AtkObject" id="search-atkobject">
@@ -55,11 +55,11 @@
     <child>
       <object class="GtkLabel" id="label1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="halign">start</property>
         <property name="label" translatable="yes" context="functionpage|label1">_Category</property>
-        <property name="use_underline">True</property>
-        <property name="mnemonic_widget">category</property>
+        <property name="use-underline">True</property>
+        <property name="mnemonic-widget">category</property>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -70,7 +70,7 @@
     <child>
       <object class="GtkComboBoxText" id="category">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <items>
           <item translatable="yes" context="functionpage|category">Last Used</item>
           <item translatable="yes" context="functionpage|category">All</item>
@@ -90,11 +90,11 @@
     <child>
       <object class="GtkLabel" id="label2">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="halign">start</property>
         <property name="label" translatable="yes" context="functionpage|label2">_Function</property>
-        <property name="use_underline">True</property>
-        <property name="mnemonic_widget">function</property>
+        <property name="use-underline">True</property>
+        <property name="mnemonic-widget">function</property>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -105,22 +105,22 @@
     <child>
       <object class="GtkScrolledWindow">
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
+        <property name="can-focus">True</property>
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
-        <property name="hscrollbar_policy">never</property>
-        <property name="shadow_type">in</property>
+        <property name="hscrollbar-policy">never</property>
+        <property name="shadow-type">in</property>
         <child>
           <object class="GtkTreeView" id="function">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <property name="model">liststore1</property>
-            <property name="headers_visible">False</property>
-            <property name="search_column">0</property>
-            <property name="show_expanders">False</property>
+            <property name="headers-visible">False</property>
+            <property name="search-column">0</property>
+            <property name="show-expanders">False</property>
             <child internal-child="selection">
               <object class="GtkTreeSelection"/>
             </child>
