--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -5,20 +5,34 @@
   <object class="GtkDialog" id="PageNumberDialog">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes" context="pagenumberdlg|PageNumberDialog">Page Number Wizard</property>
-    <property name="resizable">False</property>
     <property name="default-width">0</property>
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
-    <property name="gravity">north-east</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="mainVBox">
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
+        <property name="spacing">12</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="buttonBox">
             <property name="can-focus">False</property>
             <property name="layout-style">end</property>
+            <child>
+              <object class="GtkButton" id="help">
+                <property name="label" translatable="yes" context="stock">_Help</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="halign">start</property>
+                <property name="use-underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+                <property name="secondary">True</property>
+              </packing>
+            </child>
             <child>
               <object class="GtkButton" id="ok">
                 <property name="label" translatable="yes" context="stock">_OK</property>
@@ -30,7 +44,7 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -44,13 +58,14 @@
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">False</property>
+            <property name="fill">True</property>
+            <property name="pack-type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -102,6 +117,11 @@
                     <accessibility>
                       <relation type="labelled-by" target="positionLabel"/>
                     </accessibility>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="positionCombo-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|positionCombo">Insert page number in footer.</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -145,6 +165,11 @@
                     <accessibility>
                       <relation type="labelled-by" target="alignmentLabel"/>
                     </accessibility>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="alignmentCombo-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|alignmentCombo">Align page number in page footer or header.</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -215,6 +240,7 @@
       </object>
     </child>
     <action-widgets>
+      <action-widget response="-11">help</action-widget>
       <action-widget response="-5">ok</action-widget>
       <action-widget response="-6">cancel</action-widget>
     </action-widgets>
