--- a/sw/uiconfig/swriter/ui/fldvarpage.ui
+++ b/sw/uiconfig/swriter/ui/fldvarpage.ui
@@ -402,7 +402,7 @@
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes" context="fldvarpage|label5">_Level</property>
+                        <property name="label" translatable="yes" context="fldvarpage|label5">_Level:</property>
                         <property name="use_underline">True</property>
                         <property name="xalign">0</property>
                       </object>
@@ -415,7 +415,7 @@
                       <object class="GtkLabel" id="separatorft">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes" context="fldvarpage|separatorft">Se_parator</property>
+                        <property name="label" translatable="yes" context="fldvarpage|separatorft">Se_parator:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">separator</property>
                         <property name="xalign">0</property>
