--- a/cui/uiconfig/ui/positionpage.ui
+++ b/cui/uiconfig/ui/positionpage.ui
@@ -124,7 +124,7 @@
                   <object class="GtkLabel" id="raiselower">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="positionpage|raiselower">Raise/lower by</property>
+                    <property name="label" translatable="yes" context="positionpage|raiselower">Raise/lower by:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">raiselowersb</property>
                     <property name="xalign">0</property>
@@ -176,7 +176,7 @@
                   <object class="GtkLabel" id="relativefontsize">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="positionpage|relativefontsize">Relative font size</property>
+                    <property name="label" translatable="yes" context="positionpage|relativefontsize">Relative font size:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">fontsizesb</property>
                     <property name="xalign">0</property>
@@ -299,7 +299,7 @@
                   <object class="GtkLabel" id="label24">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="positionpage|label24">Scale width</property>
+                    <property name="label" translatable="yes" context="positionpage|label24">Scale width:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">scalewidthsb</property>
                     <property name="xalign">0</property>
@@ -409,7 +409,7 @@
               <object class="GtkLabel" id="label7">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes" context="positionpage|label7">Character spacing</property>
+                <property name="label" translatable="yes" context="positionpage|label7">Character spacing:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">kerningsb</property>
               </object>
