--- a/svx/uiconfig/ui/imapdialog.ui
+++ b/svx/uiconfig/ui/imapdialog.ui
@@ -5,6 +5,7 @@
   <object class="GtkDialog" id="ImapDialog">
     <property name="can-focus">False</property>
     <property name="border-width">6</property>
+    <property name="title" translatable="yes">ImageMap Editor</property>
     <property name="default-width">0</property>
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
